Avoid setting MaxPermSize (no longer relevant in Java 8)